[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airthings-exporter"
version = "0.0.1"
description = "Prometheus exporter for Airthings devices"
requires-python = ">=3.9"
dependencies = [
    "prometheus_client >= 0.23.1",
    "requests >= 2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.0",
    "pytest-cov >= 4.1.0",
    "pytest-mock >= 3.12.0",
    "pylint >= 3.0.0",
    "black >= 24.0.0",
    "isort >= 5.13.0",
    "pyright >= 1.1.0",
]

[project.scripts]
airthings-exporter = "airthings.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0103",  # invalid-name (allow CloudCollector module name)
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/airthings --cov-report=term-missing"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "All"
